[package]
authors = ["h-a-n-a <andywangsy@gmail.com>"]
description = "speedy sourcemap"
edition = "2021"
license = "MIT"
name = "speedy_sourcemap"
repository = "https://github.com/speedy-js/sourcemap"
version = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
node-api = ["napi", "napi-derive"]

[dependencies]
speedy_parcel_sourcemap = { version = "2.0.2" }
rayon = "1.5.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
rkyv = "0.7"
base64 = "0.13"

[dependencies.napi]
optional = true
version = "2"

[dependencies.napi-derive]
optional = true
version = "2"
